[package]
name = "coin-build-tools"
version = "0.2.6"
edition = "2021"
license = "Apache-2.0"
description = "coin-build-tools provides a set of tools to build COIN-OR libraries from source."
repository = "https://github.com/Maroon502/coin-build-tools.git"
keywords = ["coin-or", "coin-build-tools"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]

[features]
default = []

[dependencies]
cc = { version = "1.0", features = ["parallel"] }
vcpkg = "0.2"
pkg-config = "0.3"

[build-dependencies]
